<resources>
    <string name="app_name">Game Zone</string>
    <string name="double_backpress">Press back again to leave the app</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="leagues">Leagues</string>
    <string name="chat">Chat</string>
    <string name="intro_1">Latest Feature in Streaming Your Favorite Channel</string>
    <string name="next">Next</string>
    <string name="gamezone">GameZone</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_now">Login Now</string>
    <string name="login_welcome">Welcome back to PlayZone! Enter your email address and your password to enjoy the latest features of PlayZone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="don_t_have_account">Don’t have account? Create one</string>
    <string name="my_profile">My Profile</string>
    <string name="latest_lives">Latest Lives</string>
    <string name="show_all">Show all</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_link">Send Link</string>
    <string name="forgot_password_description">Enter email address associated with your account and we’ll send an email with instructions to reset your password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="live_events">Live Events</string>
    <string name="running">Running</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="series">Series</string>
    <string name="tournaments">Tournaments</string>
    <string name="matches">Matches</string>
    <string name="versus">VS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="confirm">Confirm</string>
    <string name="streamed">Streamed</string>
    <string name="no_data">Currently unavailable</string>
    <string name="error">Something went wrong</string>
    <string name="not_available">N\\A</string>
    <string name="title">Title</string>
    <string name="nothing_was_found">Nothing was found</string>
    <string name="about_us_description">About us text</string>
    <string name="message">Message</string>
    <string name="watch">Watch</string>
    <string name="invalid_email_address">Invalid E-mail address...</string>
    <string name="username_updated">Username updated</string>
    <string name="please_enter_new_username">Please enter new username</string>
    <string name="create_one">Create one</string>
    <string name="lines_are_empty">Lines are empty...</string>
    <string name="invalid_user">Invalid user...</string>
    <string name="cant_sign_in_with_google">Can\'t sign in with google...</string>
    <string name="check_your_email">Please check your email</string>
    <string name="cant_send_confirmation_email">Can\'t send confirmation email, please try again</string>
    <string name="check_entered_information">Please check entered information...</string>
    <string name="account_already_exists">Account already exists...</string>
    <string name="confirm_sign_out">Do you want to sign Out?</string>
    <string name="yes">Yes</string>
    <string name="contact_us">Contact us</string>
    <string name="return_confirmation">Do you want to return an item?</string>
    <string name="undo">Undo</string>
    <string name="reload">Reload</string>
    <string name="live_is_not_available">Live is not available</string>
    <string name="shared_match_with_you">Shared match with you</string>
    <string name="save_confirmation">You really want to save this league?</string>
    <string name="already_saved">League is already saved...</string>
    <string name="something_went_wrong">Something went wrong...</string>
    <string name="about_us">About us</string>
    <string name="chats">Chats</string>
    <string name="morning">Morning</string>
    <string name="live_now">Live Now</string>
    <string name="name">Name</string>
</resources>