<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.auth.forgot_password.ForgotPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/sk_modernist_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/sk_modernist_regular"
        android:gravity="center"
        android:text="@string/forgot_password_description"
        android:textColor="@color/app_grey" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PrimaryTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/sk_modernist_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingVertical="22dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendLink"
        style="@style/PrimaryMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/send_link" />

</LinearLayout>