<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.auth.new_password.NewPasswordFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/sk_modernist_bold"
        android:text="@string/create_new_password"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PrimaryTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email_address"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/app_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/sk_modernist_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingVertical="22dp"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmPassword"
        style="@style/PrimaryMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/confirm" />

</LinearLayout>