<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="24dp"
    tools:context=".ui.tabs.leagues.seriesfragment.SeriesFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBack"
        style="@style/PrimaryFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:text="@string/series"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/sk_modernist_bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSearch"
        style="@style/PrimaryFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:checkedButton="@id/btnRunning"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        tools:layout_editor_absoluteX="24dp">

        <RadioButton
            android:id="@+id/btnPast"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_switch_item_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/past"
            android:textColor="@drawable/selector_switch_text" />

        <RadioButton
            android:id="@+id/btnRunning"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_switch_item_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/running"
            android:textColor="@drawable/selector_switch_text" />

        <RadioButton
            android:id="@+id/btnUpcomming"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_switch_item_bg"
            android:button="@null"
            android:gravity="center"
            android:text="@string/upcoming"
            android:textColor="@drawable/selector_switch_text" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSeries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:listitem="@layout/item_league"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>